target_sources(artss
    PRIVATE
        ${CMAKE_CURRENT_LIST_DIR}/Functions.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Functions.h
        ${CMAKE_CURRENT_LIST_DIR}/TimeIntegration.cpp
        ${CMAKE_CURRENT_LIST_DIR}/TimeIntegration.h
)

add_subdirectory(adaption)
add_subdirectory(advection)
add_subdirectory(analysis)
add_subdirectory(domain)
add_subdirectory(boundaryCondition)
add_subdirectory(diffusion)
add_subdirectory(field)
add_subdirectory(interfaces)
add_subdirectory(joinedLists)
add_subdirectory(pressure)
add_subdirectory(randomField)
add_subdirectory(solver)
add_subdirectory(source)
add_subdirectory(turbulence)
add_subdirectory(utility)
add_subdirectory(visualisation)
